# Serializer

./: .gitignore  BuildGen.bat  CMakeLists.txt  vs_config.cmake
input/: a.h
src/: Log.h  impl.cpp  main.cpp
